--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "fp-kantor",
   "version": "0.0.0",
   "scripts": {
+    "cypress-open": "cypress open",
+    "cypress-run": "cypress run",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -31,10 +33,14 @@
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
+    "@cypress/webpack-preprocessor": "4.1.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.0.0",
+    "cypress": "3.6.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -42,7 +48,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "ts-loader": "6.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
