--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "precommit": "lint-staged",
+    "prettify": "prettier --write ./**/*.{json,css,scss,md,js,ts}"
   },
   "private": true,
   "dependencies": {
+    "@angular-buddies/prettier": "^1.0.0-alpha.3",
     "@angular/animations": "~8.2.8",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.8",
@@ -51,6 +54,9 @@
     "ts-loader": "6.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "prettier": "^1.12.1",
+    "lint-staged": "^7.1.2",
+    "husky": "^0.14.3"
   }
 }
