--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "precommit": "lint-staged",
-    "prettify": "prettier --write ./**/*.{json,css,scss,md,js,ts}"
+    "prettify": "prettier --write ./**/*.{json,css,scss,md,js,ts}",
+    "i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json ./src/assets/i18n/pl.json --sort -k true --format-indentation ' ' --format namespaced-json"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,8 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
@@ -36,14 +39,15 @@
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
+    "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@cypress/webpack-preprocessor": "4.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "chai": "^4.2.0",
     "codelyzer": "^5.0.0",
     "cypress": "3.6.0",
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2",
+    "husky": "^0.14.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -51,12 +55,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "lint-staged": "^7.1.2",
+    "mocha": "^6.2.2",
+    "prettier": "^1.12.1",
     "ts-loader": "6.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "prettier": "^1.12.1",
-    "lint-staged": "^7.1.2",
-    "husky": "^0.14.3"
+    "typescript": "~3.5.3"
   }
 }
