--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
   "$schema": "http://json.schemastore.org/prettierrc",
   "singleQuote": true,
-  "printWidth": 120
+  "printWidth": 120,
+  "arrowParens": "always",
+  "overrides": [{
+    "files": "./**/*.html",
+    "options": {
+      "parser": "angular",
+      "printWidth": 160
+    }
+  }]
 }
