--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@angular/router": "~8.2.8",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -41,10 +43,9 @@
     "@angular/language-service": "~8.2.8",
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@cypress/webpack-preprocessor": "4.1.0",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "chai": "^4.2.0",
     "codelyzer": "^5.0.0",
     "cypress": "3.6.0",
     "husky": "^0.14.3",
@@ -55,8 +56,9 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-scss-preprocessor": "^4.0.0",
     "lint-staged": "^7.1.2",
-    "mocha": "^6.2.2",
+    "node-sass": "^4.13.0",
     "prettier": "^1.12.1",
     "ts-loader": "6.2.1",
     "ts-node": "~7.0.0",
